--- a/app/src/main/res/layout/activity_guide.xml
+++ b/app/src/main/res/layout/activity_guide.xml
@@ -22,7 +22,6 @@
             android:gravity="bottom"
             android:paddingBottom="10dp">
 
-
             <androidx.cardview.widget.CardView
                 android:layout_width="90dp"
                 android:layout_height="80dp"
@@ -35,10 +34,8 @@
                     android:background="@drawable/diamond">
                 </ImageView>
             </androidx.cardview.widget.CardView>
-
-
-
         </LinearLayout>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="95dp"
@@ -76,7 +73,6 @@
                 android:paddingRight="15dp">
             </TextView>
 
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -89,7 +85,7 @@
         </LinearLayout>
 
 
-<LinearLayout
+<ScrollView
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -148,6 +144,7 @@
                 android:layout_marginBottom="5dp">
             </TextView>
         </androidx.cardview.widget.CardView>
+
         <androidx.cardview.widget.CardView
             android:layout_gravity="fill"
             android:layout_rowWeight="1"
@@ -171,7 +168,6 @@
                 </ImageButton>
             </androidx.cardview.widget.CardView>
 
-
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -181,7 +177,6 @@
                 android:textStyle="bold"
                 android:textSize="12dp">
             </TextView>
-
 
             <TextView
                 android:layout_width="wrap_content"
@@ -193,11 +188,8 @@
                 android:textColor="#aaa009"
                 android:layout_marginBottom="5dp">
             </TextView>
-
-
             </androidx.cardview.widget.CardView>
-
     </GridLayout>
+</ScrollView>
 
-</LinearLayout>
 </LinearLayout>
