--- a/app/src/main/res/layout/backtoolbar.xml
+++ b/app/src/main/res/layout/backtoolbar.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#fff">
+    android:background="#EEEDEF">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -15,7 +15,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:paddingTop="2dp"
-            android:src="@drawable/arrow" />
+            android:src="@drawable/ic_back" />
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -27,6 +27,13 @@
             android:layout_marginStart="16dp"
             android:layout_toEndOf="@+id/left_icon"
             />
+        <ImageView
+            android:id="@+id/home"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentEnd="true"
+            android:layout_marginEnd="16dp"
+            android:src="@drawable/ic_baseline_home_24" />
 
 
     </RelativeLayout>
