--- a/app/src/main/res/layout/activity_a_k.xml
+++ b/app/src/main/res/layout/activity_a_k.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".AKActivity"
-    android:background="#68AFC7"
+    android:background="#A3C1CC"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="wrap_content"
@@ -15,7 +15,7 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="200dp"
         android:orientation="vertical"
         android:gravity="center">
 
@@ -33,40 +33,40 @@
         </androidx.cardview.widget.CardView>
     </LinearLayout>
 
-    <ScrollView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center"
-            android:paddingLeft="30dp"
-            android:paddingRight="30dp"
-            android:layout_marginBottom="10dp"
-            android:paddingTop="10dp"
-            android:orientation="vertical">
+            android:layout_height="wrap_content">
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textAlignment="gravity"
-                android:textColor="@color/white"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:paddingLeft="30dp"
+                android:paddingRight="30dp"
                 android:layout_marginBottom="10dp"
-                android:text="The AK is another of the best-known weapons not only in this game, but in the world of Battle Royales and shooters. The features do justice to its fame, as it is one of the rifles that have more damage and range. The negative point is that it is the least accurate of the list although, luckily, it can be solved with extras."
-                android:textSize="12dp" />
+                android:paddingTop="10dp"
+                android:orientation="vertical">
 
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:textAlignment="gravity"
-                android:textColor="@color/white"
-                android:layout_marginBottom="10dp"
-                android:text="If you're patient with shots, two or three bullet bursts, you can eliminate enemies quickly."
-                android:textSize="12dp" />
-        </LinearLayout>
-    </ScrollView>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textAlignment="gravity"
+                    android:textColor="@color/white"
+                    android:layout_marginBottom="10dp"
+                    android:text="The AK is another of the best-known weapons not only in this game, but in the world of Battle Royales and shooters. The features do justice to its fame, as it is one of the rifles that have more damage and range. The negative point is that it is the least accurate of the list although, luckily, it can be solved with extras."
+                    android:textSize="12dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:textAlignment="gravity"
+                    android:textColor="@color/white"
+                    android:layout_marginBottom="10dp"
+                    android:text="If you're patient with shots, two or three bullet bursts, you can eliminate enemies quickly."
+                    android:textSize="12dp" />
+            </LinearLayout>
+        </ScrollView>
 
 </LinearLayout>
