--- a/app/src/main/res/layout/activity_diamond_count.xml
+++ b/app/src/main/res/layout/activity_diamond_count.xml
@@ -5,7 +5,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         tools:context=".DiamondCountActivity"
-        android:background="#68AFC7"
+        android:background="#A3C1CC"
         android:orientation="vertical">
 
         <LinearLayout
@@ -35,7 +35,7 @@
             </androidx.cardview.widget.CardView>
         </LinearLayout>
 
-        <LinearLayout
+        <ScrollView
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
             <GridLayout
@@ -168,7 +168,7 @@
                     </androidx.cardview.widget.CardView>
                 </androidx.cardview.widget.CardView>
             </GridLayout>
-        </LinearLayout>
+        </ScrollView>
 
     <LinearLayout
         android:layout_width="match_parent"
