--- a/app/src/main/res/layout/activity_famas.xml
+++ b/app/src/main/res/layout/activity_famas.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#68AFC7"
+    android:background="#A3C1CC"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="wrap_content"
@@ -14,7 +14,7 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="200dp"
         android:orientation="vertical"
         android:gravity="center">
 
