--- a/app/src/main/res/layout/activity_ford.xml
+++ b/app/src/main/res/layout/activity_ford.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".FordActivity"
-    android:background="#68AFC7"
+    android:background="#A3C1CC"
     android:orientation="vertical">
     <LinearLayout
         android:layout_width="wrap_content"
@@ -15,7 +15,7 @@
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="200dp"
         android:orientation="vertical"
         android:gravity="center">
 
